--- a/style.css
+++ b/style.css
@@ -343,3 +343,86 @@ main .container .left .profile{
   background: url(./image/img2.jpg)no-repeat center center/cover;
 }
 
+.middle .story .profile-photo{
+  width: 2rem;
+  height: 2rem;
+  align-self: start;
+  border: 3pX solid var(--color-primary);
+}
+
+/* ================Ctreate Post======================*/
+.middle .create-post{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1rem;
+  background: var(--color-white);
+  padding: 0.4rem var(--card-padding);
+  border-radius: var(--border-radius);
+}
+
+.middle .create-post input[type="text"]{
+  justify-self: start;
+  width: 100%;
+  padding-left: 1rem;
+  background: transparent;
+  color: var(--color-dark);
+  margin-right: 1rem;
+}
+
+/* ======================Feeds=========================== */
+
+.middle .feeds .feed{
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  margin-top: 1rem;
+  padding: 1rem 1rem;
+  font-size: 0.85rem;
+  line-height: 1.5;
+}
+
+.middle .feed .head{
+  display: flex;
+  justify-content: space-between;
+}
+
+.middle .feed .user{
+  display: flex;
+  gap: 1rem;
+}
+
+.middle .feed .photo{
+  border-radius: var(--card-border-radius);
+  overflow: hidden;
+  margin: 0.7rem 0;
+}
+
+.middle .feed .action-buttons{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.4rem;
+  margin: 0.6rem;
+}
+
+.middle .liked-by{
+  display: flex;
+}
+.middle .liked-by span{
+  width: 1.4rem;
+  height: 1.4rem;
+  display: block;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid var(--color-white);
+  margin-left: -0.6rem;
+}
+
+.middle .liked-by span:first-child{
+  margin: 0;
+}
+
+.middle .liked-by p{
+  margin-left: 0.5rem;
+}
