--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ img{
   color: var(--color-gray);
 }
 
+/* ================Navbar====================== */
 nav{
   width: 100%;
   background: var(--color-white);
@@ -120,13 +121,13 @@ nav .container{
   justify-content: space-between;
 }
 
-nav .search-bar{
+.search-bar{
   background: var(--color-light);
   border-radius: var(--border-radius);
   padding: var(--search-padding);
 }
 
-nav .search-bar input[type="search"]{
+.search-bar input[type="search"]{
   background: transparent;
   width: 30vw;
   margin-left: 1rem;
@@ -184,6 +185,7 @@ main .container .left .profile{
 
 .left .sidebar .menu-item{
   display: flex;
+  align-items: center;
   height: 4rem;
   cursor: pointer;
   transition: all 300ms ease;
@@ -425,4 +427,347 @@ main .container .left .profile{
 
 .middle .liked-by p{
   margin-left: 0.5rem;
+}
+
+/* ==================Right========================= */
+
+main .container .right{
+  height: max-content;
+  position: sticky;
+  top: var(--sticky-top-right);
+  bottom: 0;
+}
+
+.right .messages{
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+}
+
+.right .messages .heading{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.right .messages i{
+  font-size: 1.4rem;
+}
+
+.right .messages .search-bar{
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.right .messages .category{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.right .messages .category h6{
+  width: 100%;
+  text-align: center;
+  border-bottom: 4px solid var(--color-light);
+  padding-bottom: 0.5rem;
+  font-size: 0.85rem;
+}
+
+.right .messages .category .active{
+  border-color: var(--color-dark);
+}
+
+.right .messages .category .message-requests{
+  color: var(--color-primary);
+}
+
+.right .messages .message{
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  align-items: start;
+}
+
+.right .messages .message .message-body{
+  padding-top: 0.5rem;
+}
+.right .message .profile-photo{
+  position: relative;
+  overflow: visible;
+}
+
+.right .profile-photo img{
+  border-radius: 50%;
+}
+
+.right .messages .message:last-child{
+  margin: 0;
+}
+
+.right .messages .message p{
+  font-size: 0.8rem;
+}
+
+.right .messages .message .profile-photo .active{
+  width: 0.8rem;
+  height: 0.8rem;
+  border-radius: 50%;
+  border: 3px solid var(--color-white);
+  background: var(--color-success);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+/* ======================Friend Requests====================*/
+
+.right .friend-requests{
+  margin-top: 1rem;
+}
+
+.right .friend-requests h4{
+  color: var(--color-gray);
+  margin: 1rem 0;
+}
+
+.right .request{
+  background: var(--color-white);
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  margin-bottom: 0.7rem;
+}
+
+.right .request .info{
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 0.7rem;
+}
+
+.right .request .info h5{
+  padding-top: 0.1rem;
+}
+.right .request .action{
+  display: flex;
+  gap: 1rem;
+}
+
+/* =====================Theme Customization========================== */
+
+.customize-theme{
+  background: rgba(255, 255, 255, 0.5);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  text-align: center;
+  display: grid;
+  place-items: center;
+  font-size: 0.9rem;
+  display: none;
+}
+
+.customize-theme .card{
+  background: var(--color-white);
+  padding: 3rem;
+  border-radius: var(--card-border-radius);
+  width: 50%;
+}
+
+/* =================Font Size=============== */
+
+.customize-theme .font-size{
+  margin-top: 5rem;
+}
+
+.customize-theme .font-size > div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--color-light);
+  padding: var(--search-padding);
+  border-radius: var(--card-border-radius);
+}
+
+.customize-theme .choose-size{
+  background: var(--color-secondary);
+  height: 0.3rem;
+  width: 100%;
+  margin: 0 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.customize-theme .choose-size span{
+  width: 1rem;
+  height: 1rem;
+  background: var(--color-secondary);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.customize-theme .choose-size span.active{
+  background: var(--color-primary);
+}
+
+/* ==================Primary Color============= */
+
+.customize-theme .color{
+  margin-top: 2rem;
+}
+
+.customize-theme .choose-color{
+  background: var(--color-light);
+  padding: var(--search-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.customize-theme .choose-color span{
+  width: 2.2rem;
+  height: 2.2rem;
+  border-radius: 50%;
+}
+
+.customize-theme .choose-color span:nth-child(1){
+  background: hsl(252, 75%, 60%);
+}
+.customize-theme .choose-color span:nth-child(2){
+  background: hsl(52, 75%, 60%);
+}
+.customize-theme .choose-color span:nth-child(3){
+  background: hsl(352, 75%, 60%);
+}
+.customize-theme .choose-color span:nth-child(4){
+  background: hsl(152, 75%, 60%);
+}
+.customize-theme .choose-color span:nth-child(5){
+  background: hsl(202, 75%, 60%);
+}
+
+.customize-theme .choose-color span.active{
+  border: 5px solid white;
+}
+
+/* ============================Background====================== */
+
+.customize-theme .background{
+  margin-top: 2rem;
+}
+
+.customize-theme .choose-bg{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1.5rem;
+}
+
+.customize-theme .choose-bg > div{
+  padding: var(--card-padding);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 0.4rem;
+  cursor: pointer;
+}
+
+.customize-theme .choose-bg > div.active{
+  border: 2px solid var(--color-primary);
+}
+
+.customize-theme .choose-bg .bg-1{
+  background: white;
+  color: black;
+}
+
+.customize-theme .choose-bg .bg-2{
+  background: hsl(252, 30%, 17%);
+  color: white;
+}
+
+.customize-theme .choose-bg .bg-3{
+  background: hsl(252, 30%, 10%);
+  color: white;
+}
+
+.customize-theme .choose-bg > div span{
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid var(--color-gray);
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+
+/* ======================Media Queries=============== */
+
+@media screen and (max-width: 1200px) {
+  .container{
+    width: 96%;
+  }
+
+  main .container{
+    grid-template-columns: 5rem auto 30vw;
+    gap: 1rem;
+  }
+
+  main .container .left .profile{
+    display: none;
+  }
+
+  .sidebar h3{
+    display: none;
+  }
+
+  .left .btn{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 992px){
+  nav .search-bar{
+    display: none;
+  }
+
+  main .container{
+    grid-template-columns: 0 auto 5rem;
+    gap: 0;
+  }
+
+  main .container .left{
+    grid-column: 3/4;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  }
+
+  /* =====================Notification Popup=============== */
+
+  .left .notifications-popup{
+    position: absolute;
+    left: -20rem;
+    width: 20rem;
+  }
+
+  .left .notifications-popup::before{
+    position: absolute;
+    top: 1.3rem;
+    left: calc(20rem - 0.6rem);
+    display: block;
+  }
+
+  main .container .middle{
+    grid-column: 1/3;
+  }
+
+  main .container .right{
+    display: none;
+  }
 }
