--- a/style.css
+++ b/style.css
@@ -10,11 +10,16 @@
 }
 
 :root{
-    --color-dark: hsl(252,30%,17%); 
-    --color-white: hsl(252,30%,100%);
-    --color-light: hsl(252,30%,95%);
+    --primary-color-hue: 252;
+    --dark-color-lightness: 17%;
+    --light-color-lightness: 95%;
+    --white-color-lightness: 100%;
+
+    --color-dark: hsl(252,30%,var(--dark-color-lightness)); 
+    --color-white: hsl(252,30%,var(--white-color-lightness));
+    --color-light: hsl(252,30%,var(--light-color-lightness));
     --color-gray: hsl(252,15%,65%);
-    --color-primary: hsl(252,75%,60%);
+    --color-primary: hsl(var(--primary-color-hue),75%,60%);
     --color-secondary: hsl(252,100%,90%);
     --color-success: hsl(120,95%,65%);
     --color-danger: hsl(0,95%,65%);
@@ -574,6 +579,7 @@ main .container .right{
   padding: 3rem;
   border-radius: var(--card-border-radius);
   width: 50%;
+  box-shadow: 0 0 1rem var(--color-primary);
 }
 
 /* =================Font Size=============== */
@@ -729,6 +735,10 @@ main .container .right{
   .left .btn{
     display: none;
   }
+
+  .customize-theme .card{
+    width: 80vw;
+  }
 }
 
 @media screen and (max-width: 992px){
@@ -769,5 +779,9 @@ main .container .right{
 
   main .container .right{
     display: none;
+  }
+
+  .customize-theme .card{
+    width: 92vw;
   }
 }
